<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Type a train No (1-36) and pick a station for its schedule"
        android:textColor="#180"
        android:textSize="20dp"
        android:textColorHighlight="@color/cardview_shadow_start_color"/>

    <EditText
        android:id="@+id/searchTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:singleLine="true"
        android:textColor="#000" />

    <RadioGroup

        android:id="@+id/radioNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_2" />

        <RadioButton
            android:id="@+id/radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_3" />

        <RadioButton
            android:id="@+id/radio_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_4" />

        <RadioButton
            android:id="@+id/radio_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_5" />

        <RadioButton
            android:id="@+id/radio_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_6" />

        <RadioButton
            android:id="@+id/radio_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/radio_7" />

        <RadioButton
            android:id="@+id/radio_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_8" />

        <RadioButton
            android:id="@+id/radio_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_9" />

        <RadioButton
            android:id="@+id/radio_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_10" />

    </RadioGroup>


    <Button
        android:text="Click to see schedule"
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:singleLine="true"
        android:shadowColor="#298"
        android:textSize="16dp"
        android:textColor="#298"
        android:text=" " />
</LinearLayout>